[package]
name = "fluey"
version = "0.1.0"
authors = ["Colm Ó hIcí <colmohici@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.14.2"
serde = "1.0.104"
serde_derive = "1.0.104"
byteorder = "1.3.2"
chrono = "0.4.10"
lazy_static = "1.4.0"
itertools = "0.8.2"
serde_bytes = "0.11.3"
rand = "0.7.3"

[lib]
crate-type = ["dylib"]
name = "fluey"
